
```xml
<repository>
  <id>tinkerpop-repository</id>
  <name>TinkerPop Maven2 Repository</name>
  <url>http://tinkerpop.com/maven2</url>
</repository>
```

==<hr/>==

h3. Version 1.0 (Pipes -- NOT OFFICIALLY RELEASED YET)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>1.0-SNAPSHOT</version>
</dependency>
```

==<hr/>==

!https://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-sink-pipe.png!

h3. Version 0.9 (Sink -- December 7, 2011)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>0.9</version>
</dependency>
```

* Removed all "Blueprints":http://blueprints.tinkerpop.com graph related dependencies
* Renamed @UniquePathFilterPipe@ to @CyclicPathFilterPipe@
* Renamed and removed numerous methods in @FluentPipeline@ to make DSL construction more concise
* Updated @LoopPipe@ to support emit functionality via @PipeFunction@
* Added @StorePipe@ to lazily save objects to provided collection
* Added function support to @DeduplicateFilterPipe@

==<hr/>==

!https://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-cleaner-pipe.png!

h3. Version 0.8 (Cleaner -- September 18, 2011)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>0.8</version>
</dependency>
```

* @SideEffectPipe@ now has signature of @<S,T>@ instead of @<S,E,T>@
* @GroupCountFunctionPipe@ has signature of @<S,K>@ to denote the key of its @Map<K,Number>@ side-effect
* Removed @ComparisonFilterPipe@ as it is confusing and now @PipeHelper@ has comparison support
* Added @PipeHelper.makePipeString()@ to have a single point where all pipe @toString()@s are created
* Optimized @PipeHelper.counter()@ and @PipeHelper.fillCollection()@ by respecting architecture of @AbstractPipe@
* Added @PipeHelper.iterate()@ to complete drain an iterator
* Added @FluentPipeline@ as a utility class for fluently constructing a pipeline